# Repetiteur

./: .gitattributes  README.md  TODO.md
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml  TODO.md  config.json  diesel.toml  docker-compose.yml
backend/cli/: Cargo.toml
backend/cli/src/: commands.rs  main.rs
backend/common/: Cargo.toml
backend/common/migrations/2024-09-30-161945_repetiteur_setup/: down.sql  up.sql
backend/common/src/: auth.rs  json_config.rs  lib.rs  models.rs  schema.rs
backend/common/src/repositories/: courses.rs  mod.rs  users.rs  utils.rs
backend/common/test-utilities/: Cargo.toml
backend/common/test-utilities/data/: populate_test.sql
backend/common/test-utilities/src/: lib.rs
backend/common/tests/: basic_auth.rs  config.rs  course_repository.rs  populate_test.sql  repositories.rs  user_repository.rs
backend/common/tests/data/: populate_test.sql
backend/common/tests/utilities/: mod.rs
backend/migrations/2024-09-30-161945_repetiteur_setup/: down.sql  up.sql
backend/service/: Cargo.toml
backend/service/src/: main.rs
backend/service/src/routes/: authorization.rs  mod.rs  users.rs
backend/service/tests/: authentication.rs
backend/service/tests/test_common/: mod.rs
backend/tests/: populate_test.sql
backend/tests/rest-client/: README.md  users.http
docs/: README.md
docs/imgs/: logo.pxz
frontend/: .gitignore  components.json  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(loggged-out)/login/: layout.tsx  page.tsx
frontend/components/ui/: button.tsx  light-dark-toggle.tsx  password-input.tsx
frontend/src/: config.json
