[workspace]
resolver = "2"
members = ["common", "cli", "service"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
clap = "4.5"
test-env-helpers = "0.2.2"
regex = "1.11"
