[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true }
argon2 = "0.5"
rand = "0.8"
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
test-env-helpers = { workspace = true }
