[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
common = { path = "../common" }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
rocket = { version = "0.5", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.2", features = [
    "diesel_postgres",
    "deadpool_redis",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
